# metahypergraph

./: CMakeLists.txt
res/: icon.rc
src/: drawer.cpp  drawer.h  hypermetagraph.cpp  hypermetagraph.h  main.cpp  physics.cpp  physics.h  types.cpp  types.h  vec_ops.h
src/types/: base.h  config.h  edge.cpp  edge.h  hypergraph.cpp  hypergraph.h  metahypergraph.cpp  metahypergraph.h  node.cpp  node.h
src/util/: bezier.cpp  floyd_warshall.cpp  kamada_kawai.cpp  utf8.cpp  vec_ops.h
